syntax = "proto3";

package proto;

option go_package = "/proto";
import "hello_world.proto";
import "credential.proto";
import "google/api/annotations.proto";

// Here is the overall greeting service definition where we define all our endpoints
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloReply) {
    option (google.api.http) = {
      post: "/v1/example/echo"
      body: "*"
    };
  }
  rpc InitCredential (InitCredentialRequest) returns (InitCredentialReply) {
    option (google.api.http) = {
      post: "/v1/init/crt"
      body: "*"
    };
  }
}