syntax = "proto3";

package proto;

option go_package = "/proto";

message InitCredentialRequest {
  int32 id = 1;
  string name = 2;
  string type = 3;
  string args = 4;
  string fullData = 5;
}

message InitCredentialReply {
  int32 id = 1;
  string name = 2;
  string type = 3;
  string args = 4;
  string fullData = 5;
}

